// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputField component render InputField component 1`] = `
<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onSelect={[Function]}
  placeholder=""
  readOnly={false}
  spellCheck={true}
  type="text"
  value=""
/>
`;

exports[`InputField component render InputField component with placeholder 1`] = `
<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onSelect={[Function]}
  placeholder="placeholder text"
  readOnly={false}
  spellCheck={true}
  type="text"
  value=""
/>
`;

exports[`InputField component render InputField component with value 1`] = `
<input
  autoCapitalize="sentences"
  autoComplete="on"
  autoCorrect="on"
  className="css-textinput-11aywtz r-borderColor-4yh6xw r-borderRadius-1f0042m r-borderWidth-rs99b7 r-maxWidth-127gp16 r-paddingBottom-1inuy60 r-paddingLeft-1yt7n81 r-paddingRight-ry3cjt r-paddingTop-glunga r-width-13qz1uu"
  dir="auto"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onSelect={[Function]}
  placeholder=""
  readOnly={false}
  spellCheck={true}
  type="text"
  value="input"
/>
`;
